--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="book_author">Author: %1$s</string>
     <string name="show_more">Show more</string>
     <string name="show_less">Show less</string>
+    <string name="username">username</string>
+    <string name="login">login</string>
+    <string name="email">Email</string>
 </resources>
