--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="please_enter_username">Please enter your username</string>
     <string name="add_review">Post Review</string>
     <string name="reviews_header">Reviews</string>
+    <string name="enter_comment">Type your comment here!</string>
+    <string name="post_review">post</string>
+    <string name="post_review_title">Post Your Review</string>
+    <string name="cancel">cancel</string>
 </resources>
