--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="password">password</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="proceed_to_login">Proceed to Login</string>
+    <string name="review_comment">Review Comment</string>
+    <string name="edit_review">Edit Review</string>
+    <string name="delete_review">delete review</string>
+    <string name="confirm_delete_review">Are you sure you want to delete this review?</string>
 </resources>
