--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="edit_review">Edit Review</string>
     <string name="delete_review">delete review</string>
     <string name="confirm_delete_review">Are you sure you want to delete this review?</string>
+    <string name="profile_pic_desc">profile Pic</string>
+    <string name="Followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="your_reviews">Your reviews</string>
+
 </resources>
