--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="book_author">Author: %1$s</string>
     <string name="show_more">Show more</string>
     <string name="show_less">Show less</string>
-    <string name="username">username</string>
+    <string name="username">username:</string>
     <string name="login">Login</string>
     <string name="email">email</string>
     <string name="please_enter_username">Please enter your username</string>
@@ -37,8 +37,9 @@
     <string name="delete_review">delete review</string>
     <string name="confirm_delete_review">Are you sure you want to delete this review?</string>
     <string name="profile_pic_desc">profile Pic</string>
-    <string name="Followers">Followers</string>
-    <string name="following">Following</string>
+    <string name="Followers">Followers: </string>
+    <string name="following">Following: </string>
     <string name="your_reviews">Your reviews</string>
+    <string name="Hello">Hello, %1$s!</string>
 
 </resources>
