user reviews implemented in the profile page. Users can now see their past reviews

--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -41,5 +41,8 @@
     <string name="following">Following: </string>
     <string name="your_reviews">Your reviews</string>
     <string name="Hello">Hello, %1$s!</string>
+    <string name="profile_edit_review_button">profile edit review button</string>
+    <string name="profile_delete_review_button">Profile delete review button</string>
+    <string name="book_cover_for_profile_review">Book cover for profile review</string>
 
 </resources>
