--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -50,5 +50,9 @@
     <string name="saved">Saved</string>
     <string name="search_users_button">search_users_button</string>
     <string name="search_user_hint">Search by username</string>
+    <string name="follow">Follow</string>
+    <string name="username_item">Username</string>
+    <string name="followed_user">Followed %1$s</string>
+    <string name="unfollowed_user">Unfollowed %1$s</string>
 
 </resources>
