Impelemented a function that ensures the comments/reviews and rating-stars to be non-empty

--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="followed_user">Followed %1$s</string>
     <string name="unfollowed_user">Unfollowed %1$s</string>
     <string name="Follow">Follow</string>
+    <string name="comment_required">Require Comment message</string>
+    <string name="rating_required">Rating Required</string>
 
 </resources>
