implemented followers and following count. User can now see the number of people they follow and those who follow them

--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="username_item">Username</string>
     <string name="followed_user">Followed %1$s</string>
     <string name="unfollowed_user">Unfollowed %1$s</string>
+    <string name="followers_count">Followers: %1$d</string>
+    <string name="following_count">Following: %1$d</string>
 
 </resources>
