--- a/astudio/app/src/main/res/values/strings.xml
+++ b/astudio/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="profile_pic_desc">profile Pic</string>
     <string name="Followers">Followers: </string>
     <string name="following">Following: </string>
-    <string name="your_reviews">Your reviews</string>
+    <string name="past_reviews">Reviews History</string>
     <string name="Hello">Hello, %1$s!</string>
     <string name="saved_books_button">Saved Books</string>
     <string name="your_saved_books">Your Saved Books</string>
@@ -59,5 +59,6 @@
     <string name="Follow">Follow</string>
     <string name="comment_required">Require Comment message</string>
     <string name="rating_required">Rating Required</string>
+    <string name="Following">Following</string>
 
 </resources>
